--- a/app/templates/rentals.hbs
+++ b/app/templates/rentals.hbs
@@ -3,21 +3,20 @@
   <h2>Welcome!</h2>
   <p>
     We hope you find exactly what you're looking for in a place to stay.
+  <br>
+  <br>
+    <strong>Hint! : This is not supposed to work unless you navigate to a sub-route - Happy browsing</strong>
   </p>
   {{#link-to 'about' class="button"}}
     About Us
   {{/link-to}}
 </div>
 
-{{#list-filter
-   filter=(action 'filterByCity')
-   as |rentals|}}
-  <ul class="results">
-    {{#each rentals as |rentalUnit|}}
-      <li>{{rental-listing rental=rentalUnit}}</li>
-    {{/each}}
-  </ul>
-{{/list-filter}}
+
+<!--we're nesting the data that could be filtered inside of the component which will perform the filtering action-->
+<!-- #each rentals inside of #list-filter-->
+
+{{outlet}}
 
 {{!-- {{#each model as |rentalUnit|}}
   {{rental-listing rental=rentalUnit}}
